changed package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vue-sortable",
+    "name": "vue-multi-sortable",
     "description": "Vue sortable list component",
     "version": "1.0.0",
     "author": "lucamaral <lucas.amaral@gmail.com>",
